# klujax

./: .bumpversion.cfg  .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  benchmark.py  ffi.ipynb  ffi.md  justfile  klujax.cpp  klujax.py  klujax_old.cpp  klujax_old.py  mkdocs.yml  pyproject.toml  readme.md  setup.py  solve.ipynb  tests.py
.github/: run_tests.py
.github/workflows/: docs.yml  main.yml  pr.yml  publish.yml  test.yml
docs/: concepts.md  getting-started.md  index.md
docs/advanced/: jax-integration.md  memory-management.md  performance.md
docs/api/: analyze.md  coalesce.md  dot.md  factor.md  free.md  refactor.md  solve-with-numeric.md  solve-with-symbol.md  solve.md
docs/examples/: basic-solve.md  batched.md  differentiation.md  high-performance.md  newton-raphson.md
docs/js/: mermaid-init.js
