[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "pip", "build", "wheel"]

[project]
authors = [
  {name = "Floris Laporte", email = "floris.laporte@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 2.7",
  "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "jaxtyping>=0.2.38",
  "numpy>=2"
]
description = "a KLU solver for JAX"
license = {file = "LICENSE"}
name = "klujax"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.1"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "ipykernel>=6.29.5",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "ruff>=0.9.7",
  "setuptools>=75.8.0",
  "tbump>=6.11.0"
]

[tool.pytest.ini_options]
addopts = '--tb=short'
testpaths = ["tests.py"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = ["N803", "N806", "TD002", "TD003", "PLR0913", "D203", "D212", "FIX", "ERA", "PLR2004"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["PTH", "ANN", "D101", "D102"]
"tests.py" = ["D", "INP001", "ANN", "T201", "E501", "N806"]

[tool.setuptools.package-data]
"*" = [
  "LICENSE",
  "README.md",
  "MANIFEST.in"
]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "klujax.py"

[[tool.tbump.file]]
src = "klujax.cpp"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.3.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
