[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "pip", "build", "wheel"]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "ipykernel>=6.29.5",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "ruff>=0.9.7",
  "setuptools>=75.8.0",
  "tbump>=6.11.0",
  "ty==0.0.26"
]
docs = [
  "mkdocs",
  "mkdocs-shadcn @ git+https://github.com/flaport/mkdocs-shadcn.git",
  "pymdown-extensions>=10.0"
]

[project]
authors = [
  {name = "Floris Laporte", email = "floris.laporte@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "jaxtyping>=0.2.38",
  "numpy>=2"
]
description = "a KLU solver for JAX"
license = "LGPL-2.0-only"
license-files = ["LICENSE"]
name = "klujax"
readme = "README.md"
requires-python = ">=3.11"
version = "0.4.8"

[[tool.bver.file]]
src = "README.md"

[[tool.bver.file]]
src = "pyproject.toml"

[[tool.bver.file]]
src = "klujax.py"

[[tool.bver.file]]
src = "klujax.cpp"

[tool.bver.git]
action = "commit-tag-and-push"

[tool.pytest.ini_options]
addopts = '--tb=short'
testpaths = ["tests.py"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]  # see https://docs.astral.sh/ruff/rules
ignore = [
  "N803",  # invalid-argument-name
  "D213",  # multi-line-summary-second-line
  "N806",  # non-lowercase-variable-in-function
  "TD002",  # missing-todo-author
  "D211",  # blank-line-before-class
  "TD003",  # missing-todo-link
  "PLR0913",  # too-many-arguments
  "FIX",  # flake8-fixme
  "ERA",  # eradicate
  "PLR2004",  # magic-value-comparison
  "COM812",  # missing-trailing-comma
  "D203",  # one-blank-line-before-class
  "ANN001",  # missing-type-annotation
  "ANN202",  # missing-return-type-annotation
  "ARG001",  # unused-function-argument
  "ARG005",  # unused-lambda-argument
  "S101"  # assert-used
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
".github/run_tests.py" = ["INP", "PTH", "T201", "S603", "S607"]
"benchmark.py" = ["INP001", "T201"]
"setup.py" = ["PTH", "ANN", "D101", "D102"]
"tests.py" = ["D", "INP001", "ANN", "T201", "E501", "N806", "SLF001"]

[tool.setuptools.package-data]
"*" = [
  "LICENSE",
  "README.md",
  "MANIFEST.in"
]
